# ProtoSimICS

./: CMakeLists.txt  CMakePresets.json  README.md
libs/engine/: EthernetMedium.hpp  Event.hpp  EventQueue.hpp  Node.hpp  SimulatedSocket.hpp  SimulationClock.hpp
src/: main.cpp
src/app/: main.cpp
src/engine/: EthernetMedium.cpp  EthernetMedium.hpp  Event.cpp  EventQueue.cpp  EventQueue.hpp  Node.cpp  Node.hpp  SimulatedSocket.cpp  SimulationClock.cpp
